<resources>
    <string name="app_name" translatable="false">&appname;</string>
    <string name="removed_bookmark_msg">Removed from bookmark</string>
    <string name="bookmark_added_msg">Added to bookmark</string>
    <string name="internet_connection_required">Connect to the internet and retry</string>
    <string name="no_video_msg">There is currently no video for this page, make sure you are connected to the internet to get notified of new videos.</string>
    <string name="close">Close</string>
    <string name="unable_to_share_book">You can not share this book at the moment as it has been unpublished from the book store, try later</string>
    <string name="total_earnings">Total Earnings: $%,.2f </string>
    <string name="earnings_connection_error">Error no internet connection.</string>
    <string name="payment_unsuccessful">Sorry your payment transaction was unsuccessful, try again after some time.</string>
    <string name="payment_unsuccessful_title">Error processing your transaction</string>
    <string name="location_not_supported">Your location or region is not yet supported for book purchase at the moment.</string>
    <string name="unsupported_region">Unsupported region</string>
    <string name="payment_successful">Yay, your payment transaction was successful and books you are in your book shelf ready to be downloaded.</string>
    <string name="payment_successful_title">Payment transaction was successful</string>
    <string name="payment_info">Payment Info</string>
    <string name="card_no">Card No</string>
    <string name="template_card_no">%1s  ************%2s</string>
    <string name="cvc">CVC</string>
    <string name="mmYY">MM/YY</string>
    <string name="proceed">Proceed</string>
    <string name="invalid_card_no">Invalid card number</string>
    <string name="invalid_card_exp_date">Invalid expiry date</string>
    <string name="invalid_cvc_no">invalid CVC number, check behind your card for a 3 digit number</string>
    <string name="check_out">Checkout</string>
    <string name="no_item_in_cart_msg">You currently have no items in your cart. Open the store tab below and add an item to the cart.</string>
    <string name="add_new_card">Add new card</string>
    <string name="total_local_and_usd">Total: %s%,.2f ($%,.2f - $%,.2f) = $%,.2f </string>
    <string name="total_local_currency">Total = %s%,.2f (%,.2f - %,.2f earnings)</string>
    <string name="total_usd">Total: $%,.2f - $%,.2f earnings = $%,.2f </string>
    <string name="payment_error">There was an error processing your payment</string>
    <string name="by">By: %s</string>
    <string name="undo">undo</string>
    <string name="transaction_processing">Your payment transaction is being verified, you will get a notification about your payment transaction status in a short time, please do not repeat book purchase, while verifying your payment.</string>
    <string name="processing_transaction">Processing payment transaction</string>
    <string name="transaction_error">Unable to complete your payment transaction as a result of "%s"</string>
    <string name="transaction_failed">Transaction failed</string>
    <string name="item_in_cart_removed_msg">Book removed from cart</string>
    <string name="cart_item_remove_msg">Slide left to remove an item from the cart.</string>
    <string name="published_date">Published date: %s</string>
    <string name="author">Author: %s</string>
    <string name="category">Category: %s</string>
    <string name="isbn">BOOK ID / ISBN: %s</string>
    <string name="first_to_rate_book">Be the first to rate this book</string>
    <string name="open">Open</string>
    <string name="options">Options</string>
    <string name="report_book">Report book</string>
    <string name="add_to_Cart">Add to cart</string>
    <string name="add_to_shelf">Add to book shelf</string>
    <string name="view_cart">View in cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="download">Download</string>
    <string name="local_price_and_usd">Price: %s%,.2f ($%,.2f)</string>
    <string name="local_price">Price: %s%,.2f </string>
    <string name="usd_price">Price: $%,.2f</string>
    <string name="downloads">Downloads</string>
    <string name="review_no">%d reviews</string>
    <string name="about_this_book">About this book</string>
    <string name="rate_this_book">Rate this book</string>
    <string name="tell_others_what">Tell others what you think</string>
    <string name="post">Post</string>
    <string name="reviewtextLength">%d/500</string>
    <string name="your_review">Your review</string>
    <string name="edit_your_review">Edit your review</string>
    <string name="ratings_reviews">Ratings and reviews</string>
    <string name="see_all_reviews">See all reviews</string>
    <string name="similar_books">Similar books</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_terms">By proceeding, you agree to our <a href="https://bookshelfhub.com/terms">terms</a>  and <a href="https://bookshelfhub.com/privacy">privacy policy</a>. </string>
    <string name="with_phone">%s with phone</string>
    <string name="time_remaining">%1$d:%2$d secs</string>
    <string name="sending_otp_code">Sending a one time pass code to your phone number</string>
    <string name="login_signup_desicription">A one time pass code will be sent to your phone number to confirm %s.</string>
    <string name="enter_phone_num">Enter phone number</string>
    <string name="or">Or</string>
    <string name="verify_phone">Verify Phone Number</string>
    <string name="enter_code_sent">Enter the 6 digit code sent to</string>
    <string name="resend_code">Didn\'t receive code? Resend code</string>
    <string name="resend_code_link">Resend code</string>
    <string name="verify">Verify</string>
    <string name="try_again">Try again</string>
    <string name="phone_error_msg">Enter a valid phone number</string>
    <string name="phone_sign_in_error">Error unable to sign you in, try again.</string>
    <string name="too_many_request_error">Unable to authenticate you at this moment as a result of too many sign in attempt, try again in the next 24hrs.</string>
    <string name="otp_error_msg">Enter a valid OPT code sent to your number</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="phone_number">Phone number</string>
    <string name="valid_phone_error">Enter a valid phone number</string>
    <string name="valid_email_error">Enter a valid email address</string>
    <string name="email">Email</string>
    <string name="about_you">Tell us about you</string>
    <string name="adding_user">Please wait, adding user to &appname;....</string>
    <string name="continue_login_signup">Continue</string>
    <string name="user_add_error">Error: unable to add user, check your network connection and try again.</string>
    <string name="connection_error">Unable to connect. Check your network data connection and try again.</string>
    <string name="google_signin_error">Error, Unable to %s</string>
    <string name="google_btn_text">%s with Google</string>
    <string name="authentication">Authentication</string>
    <string name="get_started">Let\'s get started</string>
    <string name="account_created">Your account have been created successfully.</string>
    <string name="huray">Hurrayyyy!!!</string>
    <string name="notif_channel_desc">&appname; notification channel</string>
    <string name="notif_channel_id" translatable="false">&appname;</string>
    <string name="install">INSTALL</string>
    <string name="new_update_downloaded">&appname; has just downloaded a new update</string>
    <string name="shelf">Shelf</string>
    <string name="cart">Cart</string>
    <string name="store">Store</string>
    <string name="profile">Profile</string>
    <string name="shelf_search_hint">Type a book name</string>
    <string name="store_search_hint">Type a book name or author</string>
    <string name="goto_store">Go to store</string>
    <string name="empty_shelf">Your bookshelf is empty, buy a book or get one for free in the book store.</string>
    <string name="pick_up">Pick up where you left</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="dismiss">Dismiss</string>
    <string name="percent">%d%%</string>
    <string name="storage_perm_title">Storage permission is required</string>
    <string name="storage_perm_msg">&appname; requires storage permission to work properly.</string>
    <string name="storage_perm_disabled_msg">&appname; requires storage permission to work properly. Enabled storage permission in device settings.</string>
    <string name="dismiss_msg">You can disable progress popup under profile > settings</string>
    <string name="sign_out">Sign out</string>
    <string name="book_interest">Add book interest</string>
    <string name="need_help">Need help? Chat with us</string>
    <string name="settings">Settings</string>
    <string name="write_review">Write a review</string>
    <string name="terms">Terms of use</string>
    <string name="privacy">Privacy policy</string>
    <string name="refund_policy">Refund policy</string>
    <string name="about">About</string>
    <string name="dark_mode">Dark mode</string>
    <string name="new_update">Download new update</string>
    <string name="exclamation">1</string>
    <string name="show_progess">Show progress popup</string>
    <string name="referral_link">Get referral link</string>
    <string name="share">Share</string>
    <string name="account">Account</string>
    <string name="delete_payment_cards">Delete payment cards</string>
    <string name="all_cards_deleted">All payment cards have been deleted</string>
    <string name="more">More</string>
    <string name="payment_cards">Payment cards</string>
    <string name="verify_email">Verify email</string>
    <string name="cancel">Cancel</string>
    <string name="publish_book">Publish a book</string>
    <string name="ok">Ok</string>
    <string name="data_analysis">Data Analysis</string>
    <string name="engineering_mathematics">Engineering and Mathematics</string>
    <string name="christianity">Christianity</string>
    <string name="islam">Islam</string>
    <string name="biography">Biography</string>
    <string name="literature">Literature</string>
    <string name="health_fitness">Health and Fitness</string>
    <string name="preparation">Exam or Test Preparation</string>
    <string name="humour">Humour</string>
    <string name="psychology">Psychology</string>
    <string name="novel">Novel</string>
    <string name="transportation">Transportation</string>
    <string name="fashion">Fashion</string>
    <string name="music">Music</string>
    <string name="computer_programming">Computer Programming</string>
    <string name="archeology">Archeology</string>
    <string name="civil_eng">Civil Engineering</string>
    <string name="cook_books">Cook Books</string>
    <string name="fiction">Fiction</string>
    <string name="travel">Travel and Tourism</string>
    <string name="manuals">How-to and Manuals</string>
    <string name="art_craft">Art and Craft</string>
    <string name="education">Education</string>
    <string name="law">Law</string>
    <string name="comic">Comic</string>
    <string name="business_finance">Business and Finance</string>
    <string name="news">News</string>
    <string name="languages_reference">Language and Reference</string>
    <string name="science_technology">Science and Technology</string>
    <string name="history">History</string>
    <string name="poetry">Love and Poetry</string>
    <string name="sport">Sport</string>
    <string name="religion">Religion</string>
    <string name="politics">Politics</string>
    <string name="save">Save</string>
    <string name="save_cards">Saved cards</string>
</resources>