<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="bookInterest"
            type="com.bookshelfhub.bookshelfhub.observable.BookInterestObservable" />
    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".ui.more.InterestFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/size_8"
        android:paddingBottom="120dp">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chipGroup"
                android:layout_marginTop="@dimen/size_8">

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isHistory}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/history" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isBiography}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/biography" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isComic}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/comic" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isTravel}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/travel" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isScienceAndTechnology}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/science_technology" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isSport}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/sport" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isReligion}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/religion" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isBusinessAndFinance}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/business_finance" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isChristianity}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/christianity" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isIslam}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/islam" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isHowToAndManuals}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/manuals" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isHealthAndFitness}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/health_fitness" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isPoetry}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/poetry" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isLaw}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/law" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isArtAndCraft}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/art_craft" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isMusic}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/music" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isFiction}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/fiction" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isLanguagesAndReference}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/languages_reference" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isNews}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/news" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isMathsAndEngineering}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/engineering_mathematics" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isDataAnalysis}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/data_analysis" />


                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isEducation}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/education" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isArcheology}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/archeology" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isCivilEng}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/civil_eng" />


                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isComputerProgramming}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/computer_programming" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isTransportation}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/transportation" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isLiterature}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/literature" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isNovel}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/novel" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isPhotography}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/photography" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isCookBooks}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/cook_books" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isPolitics}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/politics" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isPsychology}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/psychology" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isFashion}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/fashion" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isHumour}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/humour" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isRomance}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/romance" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isMagazine}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/magazine" />


                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="@={bookInterest.isExamAndTestPrep}"
                    android:layout_margin="@dimen/size_8"
                    android:text="@string/preparation" />

            </com.google.android.material.chip.ChipGroup>

    </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveBtn"
            android:layout_margin="@dimen/size_16"
            app:tint="@android:color/white"
            android:src="@drawable/ic_check_white_24"
            android:contentDescription="@string/save"
            android:layout_gravity="bottom|end" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>

