<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileNavigation"
    app:startDestination="@+id/aboutFragment">
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.bookshelfhub.bookshelfhub.ui.more.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about">
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.bookshelfhub.bookshelfhub.ui.more.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
    </fragment>
    <fragment
        android:id="@+id/interestFragment"
        android:name="com.bookshelfhub.bookshelfhub.ui.more.InterestFragment"
        android:label="@string/book_interest"
        tools:layout="@layout/fragment_interest">
    </fragment>
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.bookshelfhub.bookshelfhub.ui.more.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account">
    </fragment>
</navigation>