<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cartActivityNavigation"
    app:startDestination="@+id/cartFragment">

    <fragment
        android:id="@+id/savedCardsFragment"
        android:name="com.bookshelfhub.bookshelfhub.ui.cart.SavedCardsFragment"
        android:label="@string/save_cards"
        tools:layout="@layout/fragment_saved_cards" >
        <action
            android:id="@+id/action_savedCardsFragment_to_cardInfoFragment"
            app:destination="@id/cardInfoFragment" />
    </fragment>

    <fragment
        android:id="@+id/cartFragment"
        android:name="com.bookshelfhub.bookshelfhub.ui.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_cartFragment_to_cardInfoFragment"
            app:destination="@id/cardInfoFragment"
            app:enterAnim="@anim/enter_from_right" />
        <action
            android:id="@+id/action_cartFragment_to_savedCardsFragment"
            app:destination="@id/savedCardsFragment" />
    </fragment>

    <fragment
        android:id="@+id/cardInfoFragment"
        android:name="com.bookshelfhub.bookshelfhub.ui.cart.CardInfoFragment"
        android:label="@string/payment_info"
        tools:layout="@layout/fragment_card_info" >
        <action
            android:id="@+id/action_cardInfoFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
        <action
            android:id="@+id/action_cardInfoFragment_to_savedCardsFragment"
            app:destination="@id/savedCardsFragment" />
    </fragment>

</navigation>