<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context=".ui.main.ShelfFragment">

    <com.bookshelfhub.bookshelfhub.view.search.widget.MaterialSearchView
        android:id="@+id/material_search_view"
        android:layout_width="match_parent"
        android:layout_gravity="top"
        app:search_textHint="@string/shelf_search_hint"
        app:search_transitionDuration="0"
        app:search_navigationIconSupport="search"
        android:layout_height="wrap_content" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_marginBottom="100dp"
        android:paddingHorizontal="@dimen/size_25">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/empty_shelf" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gotoStoreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_16"
            android:text="@string/goto_store" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>